--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "license": "MIT",
   "dependencies": {
     "@sentry/node": "^4.4.1",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "bookshelf": "^0.13.3",
     "boom": "^7.3.0",
@@ -57,21 +58,26 @@
     "helmet": "^3.15.0",
     "http-status-codes": "^1.1.6",
     "joi": "^14.3.0",
+    "jsonwebtoken": "^8.4.0",
     "knex": "^0.15.2",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.7.1",
+    "raven": "^2.6.4",
     "serve-favicon": "^2.5.0",
     "swagger-jsdoc": "^3.2.6",
     "swagger-ui-dist": "^3.20.1",
+    "uuid": "^3.3.2",
     "winston": "^3.1.0",
     "winston-daily-rotate-file": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.0",
-    "@babel/node": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
     "chai": "^4.2.0",
     "codecov": "^3.1.0",
